icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/iagno.png
icon22_DATA = 22x22/iagno.png
icon24_DATA = 24x24/iagno.png
icon32_DATA = 32x32/iagno.png
icon48_DATA = 48x48/iagno.png
icon256_DATA = 256x256/iagno.png
iconscalable_DATA = scalable/iagno-symbolic.svg

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA) $(iconscalable_DATA)

-include $(top_srcdir)/git.mk
